--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>Pikaday</title>
+    <title>pikaday2-datetimepicker</title>
 </head>
 <body>
-    <h1>Pikaday</h1>
+    <h1>pikaday2-datetimepicker</h1>
 
     <p class="large">A refreshing JavaScript DatetimePicker — lightweight, no dependencies, modular CSS.</p>
 
